@@ -1,3 +1,8 @@
+2009-09-21  Jason Orendorff  <jason.orendorff@gmail.com>
+
+	PR python/10666:
+	* python/py-function.c (fnpy_init): Use xstrdup.
+
 2009-09-21  Phil Muldoon  <pmuldoon@redhat.com>
 
 	PR python/10633
